Library versions are updated to recent versions