@@ -116,7 +116,6 @@
 					<checkMultipleScalaVersions>false</checkMultipleScalaVersions>
 					<jvmArgs>
 						<jvmArg>-Xmx1024m</jvmArg>
-						<jvmArg>-XX:MaxPermSize=256m</jvmArg>
 					</jvmArgs>
 					<args>
 						<arg>-target:jvm-1.6</arg>
